examples/type_system/failing/209_stage_cascade_collapse.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// Parser cascade fixture: one root parse error followed by nearby generic parse noise.

fn main() -> Unit {
    let msg = "hello
    }
    }
}
